Optimize code.