@@ -3,9 +3,6 @@ package com.lingyuango.seckill.mock;
 import org.springframework.boot.SpringApplication;
 import org.springframework.boot.autoconfigure.SpringBootApplication;
 
-/**
- * VM Options: --add-opens java.base/java.lang.invoke=ALL-UNNAMED
- */
 @SpringBootApplication
 public class MockMain {
     public static void main(String[] args) {
